ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Trivial - P5
    • 2.6.0-rc2
    • Affects Version/s: None
    • Component/s: Shell
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Object.invalidForStorage has error messages that reference 'okForStorage' instead of 'invalidForStorage':

      > Object.invalidForStorage()
      2014-02-20T15:37:52.631-0500 Error: okForStorage needs 1 argument
      > Object.invalidForStorage(true)
      2014-02-20T15:37:54.217-0500 Error: argument to okForStorage has to be an object
      

      https://github.com/mongodb/mongo/blob/25bddf266b85a97d8bc17796cb0c2a0759ba639c/src/mongo/scripting/v8_db.cpp#L1002,#L1006

      —
      Version: 5611bb4517550031684c510fb7a60abe04712ca7

            Assignee:
            Matt Dannenberg (Inactive)
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: