SERVER-12806 stop calling invalidForStorage okForStorage in its error messages