src/mongo/scripting/v8_db.cpp
@@ -999,11 +999,11 @@ namespace mongo {
     }
 
     v8::Handle<v8::Value> v8ObjectInvalidForStorage(V8Scope* scope, const v8::Arguments& args) {
-        argumentCheck(args.Length() == 1, "okForStorage needs 1 argument")
+        argumentCheck(args.Length() == 1, "invalidForStorage needs 1 argument")
         if (args[0]->IsNull()) {
             return v8::Null();
         }
-        argumentCheck(args[0]->IsObject(), "argument to okForStorage has to be an object")
+        argumentCheck(args[0]->IsObject(), "argument to invalidForStorage has to be an object")
         Status validForStorage = scope->v8ToMongo(args[0]->ToObject()).storageValid(true);
         if (validForStorage.isOK()) {
             return v8::Null();
